fix max-height of logo & navigation on tablet

--- a/assets/styles/base/navigation.scss
+++ b/assets/styles/base/navigation.scss
@@ -71,7 +71,7 @@
 }
 
 .navigation-link {
-    margin-left: 1.25rem;
+    margin-left: 1.125rem;
 
     a {
         font-size: 1.125rem;
@@ -122,7 +122,7 @@
         position: relative;
         z-index: 0;
         img {
-           max-height: none;
+           max-height: 2.1875rem;
         }
     }
 }
@@ -130,6 +130,10 @@
 @include media-breakpoint-up(lg) { 
     .navigation-wrapper {
         padding: 1.25rem .625rem;
+    }
+
+    .navigation-link {
+        margin-left: 1.25rem;
     }
 }
 
